--- a/requirements.dev.in
+++ b/requirements.dev.in
@@ -12,3 +12,6 @@ pytest-cov
 pytest-env
 pytest-freezer
 mocket
+# The following is a work-around for a bug in pip-compile. For more information, see:
+# https://github.com/jazzband/pip-tools/issues/2176
+pip==25.0.1
