Add HTTP caching for GitHub API calls during development
- Add requests-cache dependency for dev environment
- Enable caching when ENABLE_HTTP_CACHE env var is set
- Cache expires after 1 hour

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ writeable_dir/
 *techsupport_ooo.json
 logs
 *workflows_cache.json
+# HTTP cache files
+*_cache.sqlite
 # startup check file, used as a dokku healthcheck
 .bot_startup_check
 
