--- a/requirements.dev.in
+++ b/requirements.dev.in
@@ -12,6 +12,7 @@ pytest-cov
 pytest-env
 pytest-freezer
 mocket
+requests-cache
 # The following is a work-around for a bug in pip-compile. For more information, see:
 # https://github.com/jazzband/pip-tools/issues/2176
 pip==25.0.1
