Add workflow history visualization
Shows continuous build state over 90 days with color-changing strips.
Green indicates success periods, red indicates failure periods.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ writeable_dir/
 *techsupport_ooo.json
 logs
 *workflows_cache.json
+workflow-history.png
 # HTTP cache files
 *_cache.sqlite
 # startup check file, used as a dokku healthcheck
