--- a/requirements.dev.in
+++ b/requirements.dev.in
@@ -15,6 +15,8 @@ mocket
 requests-cache
 plotly[express]
 kaleido
+pandas
+scipy
 # The following is a work-around for a bug in pip-compile. For more information, see:
 # https://github.com/jazzband/pip-tools/issues/2176
 pip==25.0.1
