--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,10 @@ jobs:
       - uses: actions/checkout@v5
       - uses: opensafely-core/setup-action@v1
         with:
-          install-just: true
           python-version: "3.12"
-          cache-dependency-path: requirements.*.txt
+          install-just: true
+          install-uv: true
+          cache: uv
       - name: Check formatting, linting and import sorting
         run: just check
 
@@ -32,9 +33,10 @@ jobs:
       - uses: actions/checkout@v5
       - uses: opensafely-core/setup-action@v1
         with:
-          install-just: true
           python-version: "3.12"
-          cache-dependency-path: requirements.*.txt
+          install-just: true
+          install-uv: true
+          cache: uv
       - name: Run tests
         run: |
           just test
