Update docker files
- enable strict checks in Dockerfile
- upgrade to 24.04 (required using the --non-unique flag to useradd in
  dev builds)
- update to latest repo-template changes, including resusable uv layer
  and fixing the bind mounts
- set UV_VERSION and UBUNTU_VERSION from env variables (note there's a
  default in the Dockerfile, but it'll be overwritten by env variables)
- add a docker .env file and a .dev_env file with the docker-specific
  path env variables
- use a list of env_file files in docker-compose to use the default
  .env, parent .env, and docker-specific .dev_env files
- update dev docs and dotenv-sample as we no longer need to manually
  update env variables to run in docker

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -26,6 +26,13 @@ services:
         # env vars supplied by just
         - BUILD_DATE
         - GITREF
+        # env vars from .env
+        - UBUNTU_VERSION
+        - UV_VERSION
+    # this compose file is only used for production-like testing - so we
+    # don't worry about potentially leaking dummy env vars into actual prod
+    env_file:
+      - ../.env
     # use dockers builitin PID daemon
     init: true
 
@@ -43,6 +50,9 @@ services:
         - USERID=${DEV_USERID:-1000}
         - GROUPID=${DEV_GROUPID:-1000}
     # paths relative to docker-compose.yaml file
+    env_file:
+      - ../.env
+      - .dev_env
     volumes:
       - ..:/app
 
