--- a/docker/justfile
+++ b/docker/justfile
@@ -1,16 +1,23 @@
-# Load .env files by default
+# Load .env files by default; the project .env lives one directory up
+
 set dotenv-load := true
+set dotenv-filename := ".env"
 
-# enable modern docker build features
-export DOCKER_BUILDKIT := "1"
-export COMPOSE_DOCKER_CLI_BUILD := "1"
-
-export BIN := "/opt/venv/bin"
+# used by docker compose
 
 export DEV_USERID := `id -u`
 export DEV_GROUPID := `id -g`
 
-build env="dev":
+# set versions
+
+# list available commands
+default:
+    @{{ just_executable() }} --list
+
+_dotenv:
+    {{ just_executable() }} --justfile {{ justfile_directory() }}/../justfile _dotenv
+
+build env="dev": _dotenv
     #!/usr/bin/env bash
 
     # set build args for prod builds
@@ -20,27 +27,23 @@ build env="dev":
     # build the thing
     docker compose build --pull {{ env }}
 
-
 # run python checks
 check: build
     docker compose run --rm dev /app/docker/entrypoints/check.sh
-
 
 # run tests in docker container
 test *args="": build
     docker compose run --rm test /app/docker/entrypoints/test.sh {{ args }}
 
-
 # run command in dev container
 run-cmd *args="bash": build
-    docker compose --env-file ../.env run dev {{ args }}
-
+    docker compose run --rm dev {{ args }}
 
 # run all services
 run-all: build
-    docker compose --env-file ../.env up --detach dev_bot
-    docker compose --env-file ../.env up --detach dev_dispatcher
-    docker compose --env-file ../.env up --detach dev_webserver
+    docker compose up --detach dev_bot
+    docker compose up --detach dev_dispatcher
+    docker compose up --detach dev_webserver
 
 # restart all services
 restart:
@@ -54,7 +57,6 @@ stop-all:
     docker compose stop dev_dispatcher
     docker compose stop dev_webserver
 
-
 # stop all dev containers
 rm-all: stop-all
     docker compose rm dev_bot
@@ -67,3 +69,11 @@ lint:
 # exec command in existing dev container
 exec *args="bash":
     docker compose exec dev {{ args }}
+
+# stop and remove all project containers
+clean:
+    #!/bin/bash
+    set -eux
+    . .env
+    docker compose down
+    docker container prune --force --filter label=com.docker.compose.project=$COMPOSE_PROJECT_NAME
