--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
   "django-dotenv",
   # for commands that read from Google Sheets
   "google-api-python-client",
+  # pinning until httplib2 is compatible with pyparsing 3.3.0 or above
+  "pyparsing<3.3.0",
 ]
 
 [tool.coverage.run]
