Add dependabot config for transitive dependencies
By default dependabot will only do direct dependencies for version
updates, and security updates only for transitive dependencies. We
want version updates for all.
https://docs.github.com/en/code-security/reference/supply-chain-security/dependabot-options-reference#allow--

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,8 @@ updates:
       day: "wednesday"
       time: "04:00"
       timezone: "Europe/London"
+    allow:
+      - dependency-type: "all"  # include transitive dependencies
     cooldown:
       default-days: 7
     groups:
