Always use the fully qualified RepoDigest
The order of RepoDigests was unreliable, and we always want the fully
qualified name, so grep for it.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -97,7 +97,7 @@ jobs:
             set -eu
             ssh-agent -a "$SSH_AUTH_SOCK" > /dev/null
             ssh-add - <<< "${{ secrets.DOKKU3_DEPLOY_SSH_KEY }}"
-            SHA=$(docker inspect --format='{{index .RepoDigests 0}}' "$PUBLIC_IMAGE_NAME:latest")
-            echo "Deploying $SHA to dokku3"
             set -x
+            SHA=$(docker inspect --format='{{json .RepoDigests}}' "$PUBLIC_IMAGE_NAME:latest" | grep -o "$PUBLIC_IMAGE_NAME@.*")
+            echo "Deploying $SHA to dokku3"
             ssh -o "UserKnownHostsFile=/dev/null" -o "StrictHostKeyChecking=no" dokku@dokku3.ebmdatalab.net git:from-image bennettbot "$SHA"
