Add concurrency to main CI workflow
Ensure that only one CI workflow runs at a time for each branch;
means that if the update uvmirror workflow creates a commit, the
workflow triggered by that commit will cancel the previous one.

Also explicitly ignore the uvmirror file in dependabot.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,8 @@ updates:
 
   - package-ecosystem: "uv"
     directory: "/"
+    exclude-paths:
+      - requirements.uvmirror
     schedule:
       interval: "weekly"
       day: "wednesday"
