Adjust uvmirror-update workflow for dependabot
Dependabot has read-only permissions and no access to secrets, so
dependabot PRs can't run this workflow and create and push a commit.

For dependabot-triggered runs, we fail if the uvmirror file is out
of date. The workflow can be manually triggered on the same branch
by a non-bot user to update the uvmirror file.

Only run this on pull_request, not pushes; we don't want to be
trying to create commits on merges to main, and there's no need
to do it for every push on other branches.

Note: also reduces overall permissions to 'contents:read'; the
workflow that creates the commit on non-dependabot runs uses an app
secret (so that it can trigger other workflows), so the default token
doesn't need write permissions.

--- a/.github/workflows/uvmirror-update.yml
+++ b/.github/workflows/uvmirror-update.yml
@@ -1,34 +1,24 @@
 ---
 name: Update uvmirror file
 
-permissions:
-  contents: write
-
 env:
  BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 on:
-
-  push:
-    branches-ignore: main
   pull_request:
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
-  update-uvmirror:
+  check_uvmirror:
+
     runs-on: ubuntu-22.04
-
+    outputs:
+      changed: ${{ steps.check_for_changes.outputs.changed }}
     steps:
-      - uses: actions/create-github-app-token@v2
-        id: generate-token
-        with:
-          app-id: ${{ vars.CREATE_PR_APP_ID }}
-          private-key: ${{ secrets.CREATE_PR_APP_PRIVATE_KEY }}
-
       - uses: actions/checkout@v6
-        with:
-          token: ${{ steps.generate-token.outputs.token }}
-
       - uses: opensafely-core/setup-action@v1
         with:
           install-just: true
@@ -41,8 +31,40 @@ jobs:
       - id: check_for_changes
         run: echo "changed=$(git diff -s --exit-code requirements.uvmirror || echo 1)" >> "$GITHUB_OUTPUT"
 
+      - name: Fail if changes (dependabot only)
+        if: ${{ (github.actor == 'dependabot[bot]') && (steps.check_for_changes.outputs.changed) }}
+        run: |
+          echo "uvmirror file is out of date; run again manually u(sing the workflow_dispatch trigger for this branch) to update it."
+          exit 1
+
+  update_uvmirror:
+
+    needs: check_uvmirror
+    if: ${{ (github.actor != 'dependabot[bot]') && (needs.check_uvmirror.outputs.changed ) }}
+    runs-on: ubuntu-22.04
+
+    steps:
+      - uses: actions/create-github-app-token@v2
+        id: generate-token
+        with:
+          app-id: ${{ vars.CREATE_PR_APP_ID }}
+          private-key: ${{ secrets.CREATE_PR_APP_PRIVATE_KEY }}
+
+      - uses: actions/checkout@v6
+        with:
+          ref: ${{ env.BRANCH_NAME }}
+          token: ${{ steps.generate-token.outputs.token }}
+
+      - uses: opensafely-core/setup-action@v1
+        with:
+          install-just: true
+          install-uv: true
+          cache: uv
+
+      - name: Ensure requirements.uvmirror is consistent with uv.lock
+        run: just uvmirror
+
       - name: Commit uvmirror changes
-        if: ${{ steps.check_for_changes.outputs.changed }}
         env:
           GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
         run: |
