Fix typo in yaml file

--- a/.github/workflows/uvmirror-update.yml
+++ b/.github/workflows/uvmirror-update.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Fail if changes (dependabot only)
         if: ${{ (github.actor == 'dependabot[bot]') && (steps.check_for_changes.outputs.changed) }}
         run: |
-          echo "uvmirror file is out of date; run again manually u(sing the workflow_dispatch trigger for this branch) to update it."
+          echo "uvmirror file is out of date; run again manually (using the workflow_dispatch trigger for this branch) to update it."
           echo "https://github.com/bennettoxford/bennettbot/actions/workflows/uvmirror-update.yml"
           exit 1
 
